# chat-with-my-database

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml  deps-upgrade.yml  docker.yml
src/: cli.py  main.py  utils.py
tests/: test_app.py
